# LlamaCpp-Launcher

./: .gitignore  AGENTS.md  README.md  launch-bench-webui.bat  launcher.py  llama-launcher.ps1  main.py
.opencode/memory/: CODE-llama-cpp-version-management.md
PLAN/: README.md  architecture.md  perf-monitoring.md  rust-migration-stories.md  rust-migration.md  stories.md  tui_removal.md  web-api-headless.md  web-favorites.md
PLAN/llama-cpp-version-management/: 01-state-and-version-registry.md  (+2 more)
bench/: .gitignore  AGENTS.md  README.md  models.example.json  run_coding_bench.py  tasks.json  webui.html  webui.py
llama_launcher/: __init__.py  __main__.py  api.py  command.py  config.py  discovery.py  main.py  models.py  monitoring.py  options.py  process.py  server.py  service.py
rust-version/: Cargo.toml  build.rs
rust-version/src/: command.rs  config.rs  discovery.rs  lib.rs  main.rs  models.rs  monitoring.rs  options.rs  process.rs  server.rs  service.rs  service_install.rs
rust-version/src/monitoring/: log_tailer.rs  mod.rs  perf.rs  service.rs  system.rs
rust-version/src/service/: global_settings_domain.rs  mod.rs  state_persistence.rs  version_queries.rs
rust-version/src/service/support/: executable_finder.rs  file_tree_copier.rs  mod.rs  startup_guard.rs  value_coercer.rs
rust-version/src/versions/: github.rs  installer.rs  mod.rs
rust-version/static/: dashboard.html
rust-version/tests/: api_endpoints.rs  integration.rs  parity.rs
tests/: test_api_endpoints.py  test_concurrency.py  test_headless_startup.py  test_startup_regression.py
(+23 files in other folders)
