[package]
name = "llama-launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "winnt", "errhandlingapi", "sysinfoapi", "handleapi", "minwinbase", "fileapi"] }
windows-service = "0.7"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }
flate2 = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
